# ratatui-notifications

./: Cargo.toml  README.md  justfile
docs/: API.md
examples/: cookbook.rs  demo.rs
src/: lib.rs
src/notifications/: mod.rs  orc_manager.rs  orc_render.rs  orc_stacking.rs
src/notifications/classes/: cls_notification.rs  cls_notification_state.rs  mod.rs
src/notifications/functions/: fnc_calculate_anchor_position.rs  fnc_calculate_rect.rs  fnc_calculate_size.rs  fnc_expand_calculate_rect.rs  fnc_fade_calculate_rect.rs  fnc_fade_interpolate_color.rs  fnc_generate_code.rs  fnc_get_level_icon.rs  fnc_resolve_styles.rs  fnc_slide_apply_border_effect.rs  fnc_slide_calculate_rect.rs  fnc_slide_offscreen_position.rs  fnc_slide_resolve_direction.rs  mod.rs
src/notifications/types/: anchor.rs  animation.rs  animation_phase.rs  auto_dismiss.rs  error.rs  level.rs  mod.rs  overflow.rs  size_constraint.rs  slide_direction.rs  timing.rs
src/shared_utils/: mod.rs
src/shared_utils/math/: fnc_color_to_rgb.rs  fnc_ease_in_quad.rs  fnc_ease_out_quad.rs  fnc_lerp.rs  mod.rs
tests/: test_demo_scenarios.rs  test_expand_calculate_rect_integration.rs  test_fade_calculate_rect_integration.rs  test_fade_interpolate_color_integration.rs  test_fnc_calculate_anchor_position_integration.rs  test_fnc_calculate_rect_integration.rs  test_fnc_calculate_size_integration.rs  test_fnc_generate_code_integration.rs  test_fnc_get_level_icon_integration.rs  test_fnc_resolve_styles_integration.rs  test_orc_manager.rs  test_orc_render.rs  test_orc_stacking.rs
tests/notifications/: mod.rs
(+11 files in other folders)
